syntax = "proto3";

package gamehub.proto.client.service;

service SessionService {
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResult);

    rpc Balance(BalanceRequest) returns (BalanceResult);

    rpc ActiveBalance(ActiveBalanceRequest) returns (ActiveBalanceResult);
}

message AuthenticateRequest {
    string session_token = 1;
}

message AuthenticateResult {
    string player_id = 1;

    string player_name = 2;

    string currency = 3;
}


message BalanceRequest {
    string player_id = 1;

    string currency = 2;
}

message BalanceResult {
    int32 real_amount = 1;

    int32 bonus_amount = 2;
}

message ActiveBalanceRequest {
    string player_id = 1;
}

message ActiveBalanceResult {
    int32 real_amount = 1;

    int32 bonus_amount = 2;

    string currency = 3;
}